Updated time func

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@ $( document ).ready(function() {
       }
       console.log("Enabling "+hours)
       turnOn("esist")
-      turnOn(2)
+      turnOn(hours)
       turnOn("uhr")
 
       $('.box').addClass('box-normal');
