--- a/index.html
+++ b/index.html
@@ -12,9 +12,19 @@
   height: 100vh;
 }
 
+.bg{
+  background-color: black;
+
+}
+
 .background {
-  background-color: white;
+  background-color: #4a817c;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;  transition: 3s all;
+
 }
 
 .box {
@@ -36,17 +46,17 @@
   }
 }
 .box-normal {
-  color: #e4e4e4;
+  color: #faffff17;
 }
 
 .box-active {
-  color: black;
+  color: white;
 }
 </style>
 </head>
 <body translate="no">
 <body>
-<div class="container-fluid background">
+<div class="container-fluid bg ">
 <div class="container">
 <div class="row">
 <div class="col-1">
@@ -410,85 +420,189 @@ $( document ).ready(function() {
       }
     }
 
-    function turnOn(hours){
+    function turnOnWords(words){
+
+      switch(words){
+        case "es ist":
+            enable([1,2,4,5,6]);
+          break;
+        case "uhr":
+            enable([108,109,110]);
+        default:
+          break;
+      }
+    }
+
+    function turnOnHours(hours){
+
+      // hours
       switch(hours) {
       case 0:
-        // code block
-        break;
+        enable([95,96,97,98,99]);
       case 1:
-        // code block
          enable([56,57,58,59]);
         break;
       case 2:
-        // code block
         enable([63,64,65,66]);
         break;
       case 3:
-        // code block
         enable([67,68,69,70]);
         break;
       case 4:
-        // code block
         enable([74,75,76,77]);
         break;
       case 5:
-        // code block
-          enable([52,53,54,55]);
-
+        enable([52,53,54,55]);
         break;
       case 6:
-        // code block
         enable([78,79,80,81,82]);
-
         break;
       case 7:
-        // code block
-          enable([89,90,91,92,93,94]);
-          break;
+        enable([89,90,91,92,93,94]);
+        break;
       case 8:
-          enable([85,86,87,88]);
-        // code block
+        enable([85,86,87,88]);
         break;
       case 9:
-        // code block
-          enable([103,104,105,106]);
+        enable([103,104,105,106]);
         break;
       case 10:
-        // code block
-          enable([12,13,14,15]);
+        enable([12,13,14,15]);
         break;
       case 11:
-        // code block
-          enable([50,51,52]);
+        enable([50,51,52]);
         break;
       case 12:
-        // code block
-          enable([95,96,97,98,99]);
+        enable([95,96,97,98,99]);
         break;
-      case "esist":
-          enable([1,2,4,5,6]);
-        break;
-      case "uhr":
-          enable([108,109,110]);
       default:
           // nothing
         // code block
       }
+    }
 
+
+    function turnOn(hours,minutes){
+      console.log('running turnOn')
+      switch(true) {
+        case (minutes < 3):
+          console.log("on the hour");
+          turnOnWords("es ist")
+          turnOnHours(hours)
+          turnOnWords("uhr")
+          break;
+        case (minutes < 7):
+          console.log(":05");
+          turnOnWords("es ist")
+          enable([8,9,10,11]) //funf
+          enable([41,42,43,44]) // nach
+          turnOnHours(hours)
+          // turnOnWords("es ist")
+          // console.log("5 past");
+          break;
+        case (minutes < 12):
+          console.log(":10");
+          // enable([63,64,65,66]);
+          turnOnWords("es ist")
+          enable([12,13,14,15]) //zehn
+          enable([41,42,43,44]) // nach
+          turnOnHours(hours)
+          break;
+        case (minutes < 17):
+          console.log(":15");
+          turnOnWords("es ist")
+          enable([27,28,29,30,31,32,33]) // viertel
+          enable([41,42,43,44]) // nach
+          turnOnHours(hours)
+          break;
+        case (minutes < 22):
+          console.log(":20");
+          turnOnWords("es ist")
+          enable([16,17,18,19,20,21,22]) // zwanzig
+          enable([41,42,43,44]) // nach
+          turnOnHours(hours)
+          break;
+        case (minutes < 27):
+          console.log(":25");
+          turnOnWords("es ist")
+          enable([8,9,10,11]) // funf
+          enable([16,17,18,19,20,21,22]) // zwanzig
+          enable([41,42,43,44]) // nach
+          turnOnHours(hours)
+          break;
+        case (minutes < 32):
+          console.log(":30");
+          // enable([78,79,80,81,82]);
+          turnOnWords("es ist")
+          enable([45,46,47,48]) // Halb
+          turnOnHours(hours+1)
+          break;
+        case (minutes < 37):
+          console.log(":35");
+          turnOnWords("es ist")
+          enable([8,9,10,11]) // funf
+          enable([16,17,18,19,20,21,22]) // zwanzig
+          enable([34,35,36]) // vor
+          turnOnHours(hours+1)
+          break;
+        case (minutes < 42):
+          console.log(":40");
+          turnOnWords("es ist")
+          enable([16,17,18,19,20,21,22]) // zwanzig
+          enable([34,35,36]) // vor
+          turnOnHours(hours+1)
+          break;
+        case (minutes < 47):
+          console.log(":45");
+          turnOnWords("es ist")
+          enable([27,28,29,30,31,32,33]) // viertel
+          enable([34,35,36]) // vor
+          turnOnHours(hours+1)
+          break;
+        case (minutes < 52):
+          console.log(":50");
+          turnOnWords("es ist")
+          enable([12,13,14,15]) //zehn
+          enable([34,35,36]) // vor
+          turnOnHours(hours+1)
+          break;
+        case (minutes < 57):
+          console.log(":55");
+          turnOnWords("es ist")
+          enable([8,9,10,11]) // funf
+          enable([34,35,36]) // vor
+          turnOnHours(hours+1)
+          break;
+        case (minutes < 60):
+          console.log(":00");
+          // enable([95,96,97,98,99]);
+          console.log("on the hour");
+          turnOnWords("es ist")
+          turnOnHours(hours+1)
+          turnOnWords("uhr")
+          break;
+        default:
+          console.log('default')
+          // code block
+        }
     }
 
     function setTime(){
-       var today = new Date();
+      var today = new Date();
       var hours = today.getHours();
+      var minutes = today.getMinutes();
+      var seconds = today.getSeconds();
+
       if (hours > 13){
         hours = hours - 12
       }
-      console.log("Enabling "+hours)
-      turnOn("esist")
-      turnOn(hours)
-      turnOn("uhr")
+
+      console.log("Enabling hours: "+hours + ", enabling minutes: "+minutes)
+
+      turnOn(hours,minutes)
 
       $('.box').addClass('box-normal');
+      $(".bg").addClass('background');
 
     }
 
